--- a/client/src/style/css/Login.css
+++ b/client/src/style/css/Login.css
@@ -40,23 +40,24 @@
   align-items: center;
   text-align: center;
   letter-spacing: 0.01em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 
   color: #3e3c39;
-  margin-top: 1rem;
 
   /* sombra base */
 
   text-shadow: 4px 4px 25px rgba(0, 0, 0, 0.1);
 }
 
+.bottomLogin {
+  margin-top: 2vh;
+}
+
 .link {
   text-decoration: none;
   color: #f08a6e;
-}
-
-p {
-  font-family: fonteLabel;
-  height: 2vh;
 }
 
 .email {
